cleanup old mapping files